--- a/css/grid.css
+++ b/css/grid.css
@@ -1,4 +1,4 @@
-.grid-1 {
+.grid-1, .grid-2, .grid-3, .grid-4 {
     display:inline;
     float:left;
     position:relative;
@@ -12,6 +12,18 @@
 
 .grid .grid-1 {
     width: 220px;
+}
+
+.grid .grid-2 {
+    width: 460px;
+}
+
+.grid .grid-3 {
+    width: 700px;
+}
+
+.grid .grid-4 {
+    width: 940px;
 }
 
 
