--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,12 @@ h2 {
     height:   400px;
     text-align: center;
 }
+
+header {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
