--- a/css/style.css
+++ b/css/style.css
@@ -23,25 +23,25 @@ h2 {
 }
 
 #main {
-    height:   400px;
+    height:   300px;
     text-align: center;
     background-color: #999999;
 }
 
-#me {
-    height:   300px;
+#about {
+    height:   200px;
     text-align: center;
     background-color: #999999;
 }
 
 #facebook {
-    height:   300px;
+    height:   200px;
     text-align: center;
     background-color: #999999;
 }
 
 #resume {
-    height:   300px;
+    height:   200px;
     text-align: center;
     background-color: #999999;
 }
