--- a/css/style.css
+++ b/css/style.css
@@ -26,24 +26,36 @@ h2 {
     height:   300px;
     text-align: center;
     background-color: #999999;
+    
+    -moz-border-radius: 15px;
+    border-radius: 15px;
 }
 
 #about {
     height:   200px;
     text-align: center;
     background-color: #999999;
+    
+    -moz-border-radius: 15px;
+    border-radius: 15px;
 }
 
 #facebook {
     height:   200px;
     text-align: center;
     background-color: #999999;
+    
+    -moz-border-radius: 15px;
+    border-radius: 15px;
 }
 
 #resume {
     height:   200px;
     text-align: center;
     background-color: #999999;
+    
+    -moz-border-radius: 15px;
+    border-radius: 15px;
 }
 
 #long {
@@ -51,6 +63,9 @@ h2 {
     text-align: center;
     margin-top: 20px;
     background-color: #999999;
+    
+    -moz-border-radius: 15px;
+    border-radius: 15px;
 }
 
 #photos {
@@ -58,6 +73,9 @@ h2 {
     text-align: center;
     margin-top: 20px;
     background-color: #999999;
+    
+    -moz-border-radius: 15px;
+    border-radius: 15px;
 }
 
 #linkedIn {
@@ -65,6 +83,9 @@ h2 {
     text-align: center;
     margin-top: 20px;
     background-color: #999999;
+    
+    -moz-border-radius: 15px;
+    border-radius: 15px;
 }
 
 #contact {
@@ -72,6 +93,9 @@ h2 {
     text-align: center;
     margin-top: 20px;
     background-color: #999999;
+    
+    -moz-border-radius: 15px;
+    border-radius: 15px;
 }
 
 #twitter {
@@ -79,6 +103,9 @@ h2 {
     text-align: center;
     margin-top: 20px;
     background-color: #999999;
+    
+    -moz-border-radius: 15px;
+    border-radius: 15px;
 }
 
 header {
