--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ h2 {
 #facebook {
     height:   200px;
     text-align: center;
-    background-image: url('../image/facebook.png');
+    background-image: url('../image/fbLogo.png');
     
     -moz-border-radius: 15px;
     border-radius: 15px;
