--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ h2 {
     height:   200px;
     text-align: center;
     background-image: url('../image/about.png');
+    background-repeat: no-repeat;
 
     -moz-border-radius: 15px;
     border-radius: 15px;
@@ -44,6 +45,7 @@ h2 {
     height:   200px;
     text-align: center;
     background-image: url('../image/fbLogo.png');
+    background-repeat: no-repeat;
     
     -moz-border-radius: 15px;
     border-radius: 15px;
@@ -53,6 +55,7 @@ h2 {
     height:   200px;
     text-align: center;
     background-image: url('../image/resume.png');
+    background-repeat: no-repeat;
     
     -moz-border-radius: 15px;
     border-radius: 15px;
@@ -83,6 +86,7 @@ h2 {
     text-align: center;
     margin-top: 20px;
     background-image: url('../image/linkedIn.png');
+    background-repeat: no-repeat;
     
     -moz-border-radius: 15px;
     border-radius: 15px;
@@ -103,6 +107,7 @@ h2 {
     text-align: center;
     margin-top: 20px;
     background-image: url('../image/twitter.png');
+    background-repeat: no-repeat;
     
     -moz-border-radius: 15px;
     border-radius: 15px;
