--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ h2 {
 
 #about {
     height:   200px;
+    width: 200px;
     text-align: center;
     background-image: url('../image/about.png');
     background-repeat: no-repeat;
@@ -43,6 +44,7 @@ h2 {
 
 #facebook {
     height:   200px;
+    width: 200px;
     text-align: center;
     background-image: url('../image/fbLogo.png');
     background-repeat: no-repeat;
@@ -53,6 +55,7 @@ h2 {
 
 #resume {
     height:   200px;
+    width: 200px;
     text-align: center;
     background-image: url('../image/resume.png');
     background-repeat: no-repeat;
@@ -83,6 +86,7 @@ h2 {
 
 #linkedIn {
     height:   200px;
+    width: 200px;
     text-align: center;
     margin-top: 20px;
     background-image: url('../image/linkedIn.png');
@@ -104,6 +108,7 @@ h2 {
 
 #twitter {
     height:   200px;
+    width: 200px;
     text-align: center;
     margin-top: 20px;
     background-image: url('../image/twitter.png');
