--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,8 @@ h2 {
 }
 
 #facebook:hover {
-    background-color: #D2CDCE;
+    background-image: url('../image/resume.png');
+    background-repeat: no-repeat;
 }
 
 #facebook a {
