--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,13 @@ h2 {
     visibility: hidden;
 }
 
+#twitter_list {
+   min-height:45px;
+   height:auto !important;
+   height:40px;
+   padding-bottom:10px;
+}
+
 #twitter_updates {
    width: 415px;
    padding: 0;
