--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,65 @@ h2 {
     visibility: hidden;
 }
 
+
+#twitter_t {
+    	   width: 445px;
+		   height: 34px;
+		   /*background-image:url("your top image");*/
+           background-color: #999999;
+		}
+		
+		#twitter_m {
+		   width: 415px;
+		   padding: 0 15px;
+		   /*background:url("your middle image")  0 0 repeat-y;*/
+           background-color: #999599;
+		}
+		
+		   #twitter_container {
+		       min-height:45px;
+		       height:auto !important;
+		       height:40px;
+		       padding-bottom:10px;
+		   }
+		
+		       #twitter_update_list {
+		           width: 415px;
+		           padding: 0;
+		           overflow: hidden;
+		           font-family: Georgia;
+		           font-size: 14px;
+		           font-style: italic;
+		           color: #31353d;
+		           line-height: 16px;
+		           font-weight:bold;
+		       }
+		
+		       #twitter_update_list li {
+		           width: 415px;
+		           list-style: none;
+		       }
+		
+		       #twitter_update_list li a {
+		           color: #5f6d76;
+		           border-bottom: dotted 1px;
+		           text-decoration: none;
+		       }
+		
+		       #twitter_update_list li a:hover {
+		           color: #31353d;
+		           background: #d3f1f9;
+		       }
+		
+		#twitter_b {
+		   width: 445px;
+		   height: 29px;
+		   /*background-image:url("your bottom image");*/
+           background-color: #399999;
+		}
+	
+
+/*
 #twitter_list {
    min-height:45px;
    height:auto !important;
@@ -206,3 +265,5 @@ header {
     font: inherit;
     vertical-align: baseline;
 }
+
+*/
