--- a/css/style.css
+++ b/css/style.css
@@ -164,62 +164,76 @@ h2 {
 }
 
 
-#twitter_t {
-    	   width: 445px;
-		   height: 34px;
-		   /*background-image:url("your top image");*/
-           background-color: #999999;
-		}
-		
-		#twitter_m {
-		   width: 415px;
-		   padding: 0 15px;
-		   /*background:url("your middle image")  0 0 repeat-y;*/
-           background-color: #999599;
-		}
-		
-		   #twitter_container {
-		       min-height:45px;
-		       height:auto !important;
-		       height:40px;
-		       padding-bottom:10px;
-		   }
-		
-		       #twitter_update_list {
-		           width: 415px;
-		           padding: 0;
-		           overflow: hidden;
-		           font-family: Georgia;
-		           font-size: 14px;
-		           font-style: italic;
-		           color: #31353d;
-		           line-height: 16px;
-		           font-weight:bold;
-		       }
-		
-		       #twitter_update_list li {
-		           width: 415px;
-		           list-style: none;
-		       }
-		
-		       #twitter_update_list li a {
-		           color: #5f6d76;
-		           border-bottom: dotted 1px;
-		           text-decoration: none;
-		       }
-		
-		       #twitter_update_list li a:hover {
-		           color: #31353d;
-		           background: #d3f1f9;
-		       }
-		
-		#twitter_b {
-		   width: 445px;
-		   height: 29px;
-		   /*background-image:url("your bottom image");*/
-           background-color: #399999;
-		}
-	
+/* TWITTER CONTAINER */
+.twitter-feed
+{
+margin: 20px 0px 0px 20px;
+padding: 0px 0px 0px 0px;
+position: relative;
+background: url('images/bkgrnd-twitter.png') top left no-repeat;
+display: block;
+width: 340px;
+height: 155px;
+}
+/* TWITTER LIST */
+ul#twitter_update_list
+{
+margin: 0px 0px 0px 0px;
+padding: 22px 25px 0px 35px;
+list-style: none;
+}
+ul#twitter_update_list li
+{
+padding: 0px 0px 5px 0px;
+margin: 0px 0px 0px 0px;
+display: none; /* Prevents the entire feed list from showing momentarily on page load */
+}
+.twitter-feed span
+{
+font-size: 14px;
+color: #009BCD;
+display: block;
+line-height: 1.3em;
+}
+/* TWITTER FEED LINKS */
+.twitter-feed span a
+{
+color: #3CCEFF;
+text-decoration: none;
+}
+.twitter-feed span a:hover
+{
+color: #3CCEFF;
+text-decoration: underline;
+}
+/* OTHER LINKS */
+.twitter-feed a
+{
+color: #777;
+text-decoration: none;
+}
+.twitter-feed a:hover
+{
+color: #AAA;
+text-decoration: none;
+}
+/* TWITTER BIRD */
+.twitter-bird
+{
+margin: 105px -8px 0px 0px;
+padding: 0px 0px 0px 0px;
+position: absolute;
+top: 0;
+right: 0;
+line-height: 3.5em;
+background: url('images/twitter-bird.png') top right no-repeat;
+width: 100px;
+height: 50px;
+}
+.twitter-bird:hover
+{
+background: url('images/twitter-bird-hover.png') top right no-repeat;
+}
 
 /*
 #twitter_list {
