--- a/css/style.css
+++ b/css/style.css
@@ -167,72 +167,72 @@ h2 {
 /* TWITTER CONTAINER */
 .twitter-feed
 {
-margin: 20px 0px 0px 20px;
-padding: 0px 0px 0px 0px;
-position: relative;
-background: url('images/bkgrnd-twitter.png') top left no-repeat;
-display: block;
-width: 340px;
-height: 155px;
+    margin    				: 20px 0px 0px 20px;
+	padding		 			: 0px 0px 0px 0px;  
+	position				: relative;
+	background				: url('../images/bkgrnd-twitter.png') top left no-repeat;
+	display					: block;
+	width					: 340px;	
+	height					: 155px;
 }
 /* TWITTER LIST */
 ul#twitter_update_list
 {
-margin: 0px 0px 0px 0px;
-padding: 22px 25px 0px 35px;
-list-style: none;
+	margin					: 0px 0px 0px 0px;
+	padding 				: 22px 25px 0px 35px;
+	list-style				: none;
 }
 ul#twitter_update_list li
 {
-padding: 0px 0px 5px 0px;
-margin: 0px 0px 0px 0px;
-display: none; /* Prevents the entire feed list from showing momentarily on page load */
+	padding 				: 0px 0px 5px 0px;
+	margin					: 0px 0px 0px 0px;
+	display					: none; /* Prevents the entire feed list from showing momentarily on page load */
 }
 .twitter-feed span
 {
-font-size: 14px;
-color: #009BCD;
-display: block;
-line-height: 1.3em;
+    font-size				: 14px;
+	color					: #009BCD;
+	display					: block;
+	line-height				: 1.3em;
 }
 /* TWITTER FEED LINKS */
 .twitter-feed span a
 {
-color: #3CCEFF;
-text-decoration: none;
+	color					: #3CCEFF;
+	text-decoration			: none;
 }
 .twitter-feed span a:hover
 {
-color: #3CCEFF;
-text-decoration: underline;
+	color					: #3CCEFF;
+	text-decoration			: underline;
 }
 /* OTHER LINKS */
 .twitter-feed a
 {
-color: #777;
-text-decoration: none;
+	color					: #777;
+	text-decoration			: none;
 }
 .twitter-feed a:hover
 {
-color: #AAA;
-text-decoration: none;
+	color					: #AAA;
+	text-decoration			: none;
 }
 /* TWITTER BIRD */
 .twitter-bird
 {
-margin: 105px -8px 0px 0px;
-padding: 0px 0px 0px 0px;
-position: absolute;
-top: 0;
-right: 0;
-line-height: 3.5em;
-background: url('images/twitter-bird.png') top right no-repeat;
-width: 100px;
-height: 50px;
+    margin					: 105px -8px 0px 0px;
+	padding		 			: 0px 0px 0px 0px;  
+	position				: absolute;
+	top						: 0;
+	right					: 0;	
+	line-height				: 3.5em;
+	background				: url('../images/twitter-bird.png') top right no-repeat;
+	width					: 100px;	
+	height					: 50px;
 }
 .twitter-bird:hover
-{
-background: url('images/twitter-bird-hover.png') top right no-repeat;
+{	
+	background				: url('../images/twitter-bird-hover.png') top right no-repeat;
 }
 
 /*
