--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ h2 {
     width: 200px;
     text-align: center;
     margin-top: 20px;
-    background-image: url('../image/twitter.png');
+    background-image: url('image/twitter.png');
     background-repeat: no-repeat;
     
     -moz-border-radius: 15px;
@@ -170,7 +170,7 @@ h2 {
     margin    				: 20px 0px 0px 20px;
 	padding		 			: 0px 0px 0px 0px;  
 	position				: relative;
-	background				: url('../images/bkgrnd-twitter.png') top left no-repeat;
+	background				: url('images/bkgrnd-twitter.png') top left no-repeat;
 	display					: block;
 	width					: 340px;	
 	height					: 155px;
@@ -226,13 +226,13 @@ ul#twitter_update_list li
 	top						: 0;
 	right					: 0;	
 	line-height				: 3.5em;
-	background				: url('../images/twitter-bird.png') top right no-repeat;
+	background				: url('images/twitter-bird.png') top right no-repeat;
 	width					: 100px;	
 	height					: 50px;
 }
 .twitter-bird:hover
 {	
-	background				: url('../images/twitter-bird-hover.png') top right no-repeat;
+	background				: url('images/twitter-bird-hover.png') top right no-repeat;
 }
 
 /*
