--- a/css/style.css
+++ b/css/style.css
@@ -170,8 +170,7 @@ h2 {
     margin    				: 20px 0px 0px 20px;
 	padding		 			: 0px 0px 0px 0px;  
 	position				: relative;
-	background				: url('../image/twitter.png') top left no-repeat;
-    background-repeat: no-repeat;
+	background				: url('../image/twitter.png') top right no-repeat;
 	width					: 200px;	
 	height					: 200px;
     -moz-border-radius: 15px;
