--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ h2 {
     height:             200px;
     width:              200px;
     text-align:         center;
+    background-color: #999999;
     background-repeat:  no-repeat;
     
     -moz-border-radius: 15px;
@@ -50,7 +51,7 @@ h2 {
 .hidden-link h1 {
     visibility: hidden;
 }
-
+/*
 #about {
     background-image: url('../image/about.png');
 }
@@ -71,7 +72,7 @@ h2 {
 #resume {
     background-image: url('../image/resume.png');
 }
-
+*/
 #long {
     height:   80px;
     text-align: center;
