--- a/landingPage/_layouts/blog.html
+++ b/landingPage/_layouts/blog.html
@@ -33,13 +33,20 @@
 
           <article class="post featured">
             <header class="major">
-              <h2><a href="#">Whats on my mind</a></h2>
-              <p>This could really be anything at this point, tech writups, links to my Dj streams, political or religious musings... really anything I find interesting and feel like posting on here.
+              <h2><a href="#">Importance of Blogs</a></h2>
+              <p>Blogs are really pretty awesome things. For one, they are a means to continually provide fresh,
+                dynamic content to your users. Also, they help your site get indexed and build authority as they are essential for SEO!
 							</p>
             </header>
 						<p>
-							For now expect an occasional post to things I may be working on or find interesting. This is a fresh site at a new location and ripe for new ideas and I intend to be better about keeping it up to date than I have in the past. Please feel free to email any unique ideas you may have for any write ups you may be interested in and as I have time I will see if I can work up a how to.
+							Content fulfills the general population seeing your website and it likewise fulfills web indexes! Having solid content
+							influences your advertising to work a hell of a great deal simpler. Along these lines, the greatest bit of the promoting riddle is there. It's vital to thoroughly consider this technique before starting another crusade. This makes the whole content and advertising process more streamlined and will in the end enable your message to achieve your clients in a more effective manner. You ought not think little of the significance of giving yourself room. Having squirm room takes into consideration steady changes to your methodology en route.
 						<p>
+						</p>
+							At that point, rather than pushing something superfluous to your users, you can give them something that will stick.
+							You'll give them something they can identify with and be slanted to share with their companions and associates. Perhaps they'll even be slanted to work with you later on!
+							Having an advancement technique that is excessively unbending isn't astute on the grounds that there is no space for solid spontaneous creation. Having the capacity to change your advertising procedure will prompt more deals and arrangements.
+						</p>
 
           </article>
 					<!-- Post -->
