--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,6 +2,7 @@
   <li class="{% if page.url == "/" %} active {% endif %}"><a href="{{ "/" | absolute_url }}">Home</a></li>
   <li class="{% if page.url contains '/about/' %} active {% endif %}"><a href="{{ "/about/" | absolute_url }}">About</a></li>
   <li class="{% if page.url contains '/blog/' %} active {% endif %}"><a href="{{ "/blog/" | absolute_url }}">Blog</a></li>
+  <li class="{% if page.url contains '/training/' %} active {% endif %}"><a href="{{ "/training/" | absolute_url }}">Training</a></li>
 </ul>
 
 <ul class="icons">
