adding google analytics

--- a/_includes/tracking.html
+++ b/_includes/tracking.html
@@ -1,8 +1,8 @@
-<script async src="https://www.googletagmanager.com/gtag/js?id={{site.analytics-id}}"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1FSDNJ7DYC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments)};
   gtag('js', new Date());
 
-  gtag('config', '{{site.analytics-id}}');
+  gtag('config', 'G-1FSDNJ7DYC');
 </script>
