--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,11 @@
 <ul class="links">
   <li class="{% if page.url == "/" %} active {% endif %}"><a href="{{ "/" | absolute_url }}">Home</a></li>
   <li class="{% if page.url contains '/about/' %} active {% endif %}"><a href="{{ "/about/" | absolute_url }}">About</a></li>
+  <li class="{% if page.url contains '/music/' %} active {% endif %}"><a href="{{ "/music/" | absolute_url }}">Music</a></li>
+  <li class="{% if page.url contains '/projects/' %} active {% endif %}"><a href="{{ "/projects/" | absolute_url }}">Projects</a></li>
   <li class="{% if page.url contains '/blog/' %} active {% endif %}"><a href="{{ "/blog/" | absolute_url }}">Blog</a></li>
   <li class="{% if page.url contains '/training/' %} active {% endif %}"><a href="{{ "/training/" | absolute_url }}">Training</a></li>
+  <li class="{% if page.url contains '/consulting/' %} active {% endif %}"><a href="{{ "/consulting/" | absolute_url }}">Consulting</a></li>
 </ul>
 
 <ul class="icons">
