adding metta header for impact.com

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
 <link rel="shortcut icon" href="{{ "/assets/icon/favicon.ico" | absolute_url }}">
 <meta name="msapplication-config" content="{{ "/assets/icon/browserconfig.xml" | absolute_url }}">
 <meta name="theme-color" content="#ffffff">
+<meta name='ir-site-verification-token' value='-129485041'>
 
 <!-- CSS -->
 <link rel="stylesheet" href="{{ "/assets/css/main.css" | absolute_url }}" />
